# ros2_mecademic

./: README.md
ros2_mecademic_bringup/: CMakeLists.txt  package.xml
ros2_mecademic_bringup/launch/: bringup_4_robots_simulator.launch.py  dummy_robot_bringup.launch.py  robot_4_bringup_simulator.launch.py  robot_bringup_emulator.launch.py  robot_bringup_simulator.launch.py
ros2_mecademic_description/: README.md  package.xml
ros2_mecademic_description/urdf/: meca_500_r3.urdf
ros2_mecademic_examples/launch/: bringup_4_robots_simulator.launch.py  robot_1_bringup_simulator.launch.py  robot_2_bringup_simulator.launch.py  robot_3_bringup_simulator.launch.py
ros2_mecademic_gui/: README.md  package.xml
ros2_mecademic_gui/src/: ros2_mecademic_gui.py
ros2_mecademic_interfacer/: README.md  package.xml  setup.cfg  setup.py
ros2_mecademic_interfacer/src/: ros2_mecademic_interfacer.py
ros2_mecademic_msgs/: CMakeLists.txt  README.md  package.xml
ros2_mecademic_msgs/msg/: MecademicEsdToGui.msg  MecademicEsdToSP.msg  MecademicGuiToEsd.msg  MecademicGuiToUtilities.msg  MecademicInterfacerToDriver.msg  MecademicInterfacerToGui.msg  MecademicInterfacerToSimulator.msg  MecademicSPToEsd.msg  MecademicSPToUtilities.msg  MecademicUtilitiesToGui.msg  MecademicUtilitiesToSP.msg  MecademicUtilsToEsd.msg
ros2_mecademic_sim/: package.xml  setup.cfg  setup.py
ros2_mecademic_simulator/: package.xml
ros2_mecademic_state_publisher/: package.xml
ros2_mecademic_utilities/: package.xml
ros2_mecademic_utils/: package.xml  setup.cfg  setup.py
(+7 files in other folders)
